--- a/data-science.html
+++ b/data-science.html
@@ -77,7 +77,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/fanatics/d7af02b3-235e-4b39-8aae-4abec814147b'>Fanatics - Senior Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fanatics/d7af02b3-235e-4b39-8aae-4abec814147b'>Fanatics - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -93,11 +93,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/V6k4JUphaX/Sr-Enterprise-Account-Exec-Data-Science-ML-Munich'>Sr. Enterprise Account Exec- Data Science / ML -Munich - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/Y4bUDCcNNV/Sr-Enterprise-Account-Exec-Data-Science-ML-Sydney'>Sr. Enterprise Account Exec- Data Science / ML -Sydney - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -112,6 +112,11 @@
 <h5><a href='http://h2oai.applytojob.com/apply/IpXAHNqOgK/Sr-Enterprise-Account-Exec-Data-Science-ML-Mid-Atlantic-MA-DC-VA-PA'>Sr. Enterprise Account Exec- Data Science / ML -Mid Atlantic (MA, DC, VA, PA) - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bl-consulting-co-op-data-science-ml-33097'>BL Consulting Co-op (Data Science & ML) - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Experience with data mining, imputations techniques, algorithms for data science
+, statistical inference and modeling, machine learning. Experience in Natural?...</p>
 <hr/>
 <h5><a href='https://talpasolutions.join.com/jobs/272213-data-scientist'>Job @ talpasolutions (Essen): Data Scientist | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -156,7 +161,7 @@ delivering actionable insights on crop health directly to the field meaning farm
 <p><span class="badge badge-light">Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SiaPartners/743999692292417-consultant-e-data-science'>Sia Partners Consultant(e) Data Science | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -384,7 +389,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medlanes.join.com/jobs/263024-data-scientist-digital-health-startup-m-f'>Job @ Medlanes (Berlin): Data Scientist - Digital ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -392,7 +397,7 @@ Science (?Behavioral Data Scientist?) to support our three core operational?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/37aade70-1f4f-494a-89bb-0ae1775109e2/apply'>Criteo - Product Data Scientist - Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Product Data Scientist - Analytics. Paris, France. Product. Permanent. Submit 
 your application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -476,10 +481,6 @@ and artificial intelligence advances? In an increasingly connected world, massiv
 <p>Jul 12, 2019 ... Are you fascinated by the possibilities presented by the IoT, machine learning, 
 and artificial intelligence advances? In an increasingly connected world, massive
 ?...</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/uipath/3171ccce-9e90-47a1-b800-11b4c75c4821'>UiPath - Senior Customer Data Scientist</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-07-23</p>
 <hr/>
 
 
