--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -87,7 +87,7 @@ Berlin (published: 18.09.2018). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1787295'>Job Application for Analyst- Business Intelligence at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -97,7 +97,7 @@ Berlin (published: 18.09.2018). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86?viewed=true'>Enterprise Business Intelligence Manager</a></h5> 
+<h5><a href='https://iland-internet-solutions-corporation.workable.com/j/56909B3D86?viewed=true'>Enterprise Business Intelligence Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of Enterprise Business Intelligence Manager at iland 
 Internet Solutions Corporation.</p>
@@ -110,7 +110,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/homex/f618f028-fcd0-433f-8efe-e75d1d6e6429'>HomeX - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -144,7 +144,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -160,11 +160,11 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/shopkick/jobs/data-analyst-analytics-and-business-intelligence-d41Sa8RxCr6ALNaKkRyNN8'>Data Analyst, Analytics and Business Intelligence #0316 job at shopkick in Redwood City, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -177,7 +177,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p>3 days ago ... Apply online for the job of Head of Business Intelligence & Data Science at Verse 
 Technologies Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LeoVegascom/743999692170513-business-intelligence-engineer'>LeoVegas.com Business Intelligence Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -246,7 +246,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -262,7 +262,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/doriltoncapital/jobs/4342999002'>Job Application for Solutions Architect - Business Intelligence/Data ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/doriltoncapital/jobs/4342999002'>Job Application for Solutions Architect - Business Intelligence/Data ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Dorilton Capital is looking for a Business Intelligence/Data Warehouse (BI/DW) 
 Solutions Architect to design and build the firm's Data Warehouse and Business?...</p>
@@ -271,7 +271,7 @@ Solutions Architect to design and build the firm's Data Warehouse and Business?.
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
+<h5><a href='https://boards.greenhouse.io/opentable/jobs/4365000002'>Job Application for Principal Business Intelligence Developer at OpenTable</a></h5> 
 <p><span class="badge badge-light">Los Angeles</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -322,7 +322,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -399,7 +399,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
+<h5><a href='https://paymentsense-1.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC, Maternity Cover) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -411,7 +411,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zengistics.workable.com/j/7A5536A547'>Zengistics - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://zengistics.workable.com/j/7A5536A547'>Zengistics - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -424,7 +424,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p>Jul 10, 2019 ... We are currently looking for a (Junior) Business Intelligence Analyst (m/f/x) to join 
 our BI team. The position is available at the earliest possible date in full-time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/okcupid/jobs/1775197'>Job Application for Business Intelligence Analyst / Developer at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/okcupid/jobs/1775197'>Job Application for Business Intelligence Analyst / Developer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... OkCupid is looking for a BI expert to contribute to our data-driven organization. 
 We enjoy working on a product that helps millions of people find love and get a?...</p>
@@ -437,7 +437,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746970'>Job Application for Business Intelligence Analyst at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746970'>Job Application for Business Intelligence Analyst at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -445,11 +445,11 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/quartethealth/jobs/4358634002'>Job Application for Business Intelligence (BI) Engineer at Quartet Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/quartethealth/jobs/4358634002'>Job Application for Business Intelligence (BI) Engineer at Quartet Health</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
